--- a/package.json
+++ b/package.json
@@ -9,11 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.15",
+    "@heroicons/react": "^2.0.18",
+    "@netlify/plugin-nextjs": "^4.38.1",
+    "@sanity/client": "^6.1.3",
+    "@sanity/image-url": "^1.0.2",
     "autoprefixer": "10.4.14",
+    "framer-motion": "^10.12.16",
     "next": "13.4.6",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.9.0",
+    "react-tooltip": "^5.14.0",
+    "react-type-animation": "^3.1.0",
+    "sanity": "^3.12.2",
+    "sass": "^1.63.5",
     "tailwindcss": "3.3.2"
   }
 }
